k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crop-disease-service
spec:
  selector:
    app: crop-disease
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: NodePort
